# anthenaeum

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
athenaeum/: __init__.py  artifacts.py  cli.py  conductor.py  config.py  effort.py  interactive.py  planner.py  reasoning.py  resume.py  sanity.py  schemas.py  thinkers.py  ui.py  workflow.py
athenaeum/cli/: __init__.py  app.py  commands_catalog.py  commands_core.py  commands_modes.py  commands_ops.py  config_util.py  constants.py  errors.py  io_util.py  options.py  run.py  runtime_util.py  sessions_util.py  support.py
athenaeum/gateway/: __init__.py  adapters.py  gateway.py  ledger.py  models.py  transport.py
athenaeum/loops/: __init__.py  context.py  engine.py
athenaeum/runtime/: __init__.py  api.py  cli.py  minimal.py  models.py  registry.py
athenaeum/store/: __init__.py  citations.py  claim_ledger.py  sessions.py
docs/case-studies/: grok45-effort-case-study-raw.json  grok45-effort-case-study.md
docs/specs/: 2026-07-07-cli-visual-design.md  2026-07-07-research-citations.md  2026-07-07-think-tank-spec.md
scripts/: run_grok_effort_case_study.py
tests/: test_artifacts.py  test_cli_app.py  test_cli_errors.py  test_cli_io.py  test_cli_runtime.py  test_config.py  test_core_helpers.py  test_gateway.py  test_interactive_commands.py  test_minimal_mode.py  test_output_schemas.py  test_planner.py  test_provider_adapters.py  test_reasoning_interactive.py  test_resume_errors.py  test_resume_sessions.py  test_runtime_registry.py  test_sanity.py  test_skill_installer.py  test_store_extra.py  test_store_sessions.py  test_thinkers.py  test_ui.py  test_workflow.py
(+8 files in other folders)
