[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athenaeum"
version = "0.1.0"
description = "CLI-driven, provider-agnostic AI think tank runtime spine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
thinktank = "athenaeum.cli:app"

[tool.setuptools.packages.find]
include = ["athenaeum*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore::DeprecationWarning:pytest_asyncio.*",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"athenaeum/cli/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
